package Ejercicios_Clase.Trimestre2.Empresa;
public class Desarrollador extends Empleado{
    public void realizarTarea(){
        System.out.println("Escribiendo código y solucionando bugs.");
    }
}
