package Ejercicios_Clase.Trimestre2.Empresa;

public class Diseñador extends Empleado{
    public void realizarTarea(){
        System.out.println("Creando diseños gráficos y prototipos.");
    }
}
