package Ejercicios_Clase.Trimestre2.Empresa;
public class Gerente extends Empleado{
    public void realizarTarea(){
        System.out.println("Supervisando el proyecto y organizando reuniones.");
    }
}
